tests/NormalTests/paczka1/small_fuzzy/61455276.err
Error in line 1: y1XpsZb S694 62,4
Error in line 2: y1XpsZb S431 38,0
Error in line 8: S694 S694 47,6
Error in line 9: S694 S431 28,5
